# candle-esm

./: .gitignore  Cargo.toml  readme.md
data/esm2_t6_8M_UR50D/: .gitignore  config.json
script/: tokenizers.ipynb
src/: config.rs  data.rs  main.rs  tokenizer.rs
src/model/: esm2.rs  mod.rs  multihead_attention.rs
